corpus/source_files.txt
============================================
Block comments
============================================

/*
 * Block comments
 */

/* Comment with asterisks **/

----

(source_file
  (block_comment)
  (block_comment))

============================================
Nested block comments
============================================

/* /* double nested */ */

// ---

/*/*/* triple nested */*/*/

// ---

/****
  /****
    nested with extra stars
  ****/
****/

// ---

----

(source_file
  (block_comment)
  (line_comment)
  (block_comment)
  (line_comment)
  (block_comment)
  (line_comment))

============================================
Line comments
============================================

// Comment

----

(source_file
  (line_comment))
